# oneui

./: .gitignore  README.md
backend/: .env.example  .gitignore  CONFLUENCE_AUTH_SETUP.md  DOC_SEARCH_SETUP.md  README.md  append_tags.py  deploy.sh  main.py  migrate_cataloguedata_to_tools.py  migrate_json_to_db.py  migrate_simple.py  pyproject.toml  requirements.txt  update_tags.py  verify_doc_search.sh
backend/app/api/endpoints/: admins.py  ai_search.py  doc_search.py  search.py  tags.py  tools.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: base.py  init_db.py  models.py
backend/app/models/: tool.py
backend/app/services/: ai_search.py  document_crawler.py  document_rag.py  storage.py
backend/data/chroma_db/: chroma.sqlite3
backend/migrations/: alter_icon_column.sql
frontend/: .env.development  .env.production  .env.uat  .npmrc  deploy.sh  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  App.tsx.old  ag-ui-components.d.ts  index.css  main.tsx  theme.ts
frontend/src/api/: tools.ts
frontend/src/components/: AdminPage.tsx  AdminPanel.tsx  FilterSidebar.tsx  LoginPage.tsx  MainApp.tsx  ParticlesBackground.tsx  SearchBar.tsx  ToolCard.tsx  ToolFormModal.tsx
frontend/src/types/: auth.ts  index.ts
